--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/event_management_system_Project?useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/fesco_hotel?useSSL=false
 spring.datasource.url=jdbc:mysql://localhost:3306/fesco_hotel?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Sana@2001
